crates/elif-http-derive/tests/ui/fail/unsupported_parameter.stderr
error: Function parameter 'extra_param' is not handled by any route parameter, #[body], or ElifRequest. Hint: Add '{extra_param}' to the route path and #[param(extra_param: type)], or annotate with #[body(extra_param: Type)].
  --> tests/ui/fail/unsupported_parameter.rs:17:9
   |
17 |     pub async fn show(&self, id: i32, extra_param: String, req: ElifRequest) -> String {
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `param`
 --> tests/ui/fail/unsupported_parameter.rs:3:41
  |
3 | use elif_http_derive::{get, controller, param};
  |                                         ^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default
